edited links in mob menu

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <li><a class="nav-link hh" data-dismiss="modal" href="/#contacts">Контакты</a></li>
                     </ul>
                 </div>
-                <a class="boot boot-mob-menu hh" href="/#anketa" data-dismiss="modal">Заполнить анкету</a>
+                <a class="boot boot-mob-menu hh" href="#anketa" data-dismiss="modal">Заполнить анкету</a>
             </div>
         </div>
     </div>
