--- a/requirements.html
+++ b/requirements.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header class="main_menu home_menu">
+    <!-- <header class="main_menu home_menu">
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
@@ -73,10 +73,10 @@
                 </nav>
             </div>
         </div>
-    </header>
+    </header> -->
     <!-- Header part end-->
     <!-- Mobile Menu start -->
-    <div class="modal fade fullscreen" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: 9999">
+    <!-- <div class="modal fade fullscreen" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: 9999">
         <div class="modal-dialog">
             <div class="modal-content" style="color:#fff;">
                 <div class="modal-header" style="border:0;">
@@ -94,6 +94,80 @@
                     </ul>
                 </div>
                 <a class="boot boot-mob-menu hh" href="/#anketa" data-dismiss="modal">Заполнить анкету</a>
+            </div>
+        </div>
+    </div> -->
+    <header class="main_menu home_menu">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-xl navbar-dark">
+                    <a class="d-none d-xl-block navbar-brand" href="/#home">PREMIUM<span>ESCORT
+                        <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
+                    <a class="d-xl-none navbar-brand-mob" href="/#home">PREMIUM ESCORT</a>
+                    <div class="row mob-menu-icons">
+                        <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="container">
+                        <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
+                            <ul class="navbar-nav menu align-items-center">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/">Главная</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html">Об агентстве</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="advantages.html">Почему мы?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="requirements.html">Требования</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="faq.html">FAQ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/#reviews">Отзывы</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/#contacts">Контакты</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="menu_right_block">
+                        <div class="hidden menu_right_item">
+                            <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 007 01 01</a>
+                            <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
+                        </div>
+                        <a class="boot" href="/#anketa">Заполнить анкету</a>
+
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- Header part end-->
+    <!-- Mobile Menu start -->
+    <div class="modal fade fullscreen" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: 9999">
+        <div class="modal-dialog">
+            <div class="modal-content" style="color:#fff;">
+                <div class="modal-header" style="border:0;">
+                    <button type="button" class="btn btn-link menu-close" data-dismiss="modal"><img src="./img/icon/close.svg"></button>
+                </div>
+                <div class="modal-body mod-menu text-center">
+                    <ul style="list-style-type:none;">
+                        <li><a class="nav-link" href="/">Главная</a></li>
+                        <li><a class="nav-link" href="about.html">Об агентстве</a></li>
+                        <li><a class="nav-link" href="advantages.html">Почему мы?</a></li>
+                        <li><a class="nav-link" href="requirements.html">Требования</a></li>
+                        <li><a class="nav-link" href="faq.html">FAQ</a></li>
+                        <li><a class="nav-link" href="/#reviews">Отзывы</a></li>
+                        <li><a class="nav-link" href="/#contacts">Контакты</a></li>
+                    </ul>
+                </div>
+                <a class="boot boot-mob-menu" href="/#anketa">Заполнить анкету</a>
             </div>
         </div>
     </div>
